# littrailblazer

./: .gitignore  Cargo.toml  LICENSE  README.md  README_cn.md  Readme.md  build.rs  configlist.schema.json  note.md
.cargo/: config.toml
.github/workflows/: build.yml  check.yml  package.yml
benches/: benchmark.rs
examples/: dump-config.rs
src/: builder.rs  cli.rs  lib.rs  log.rs  main.rs  program.rs
src/deploy/: alias.rs  apt.rs  command.rs  deployer.rs  env.rs  envrc.rs  file.rs  mod.rs
src/op/: apt.rs  file.rs  http.rs  mod.rs
src/types/: config.rs
test_example/: aosp.toml  bash.toml  docker.toml  feishu.toml  log.toml  misc.toml  rust.toml  wsl.toml
