[package]
name = "distro_pioneer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.4"
derive_more = { version = "2.0.1", features = ["debug"] }
dirs = "6.0.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.27"
regex = "1.11.1"
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_jsonc = "1.0.108"
tempfile = "3.20.0"
toml = "0.8.22"
url = { version = "2.5.4", features = ["serde"] }
which = "7.0.3"

[build-dependencies]
anyhow = "1.0.98"
log = "0.4.27"
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
url = { version = "2.5.4", features = ["serde"] }

[[bench]]
name = "benchmark"
harness = false
